--- a/llfit_application/pubspec.yaml
+++ b/llfit_application/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
   dio: ^5.5.0+1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
