--- a/llfit_application/pubspec.yaml
+++ b/llfit_application/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.3
   dio: ^5.5.0+1
   jwt_decoder: ^2.0.1
+  percent_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
