report and info created

--- a/llfit_application/pubspec.yaml
+++ b/llfit_application/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   dio: ^5.5.0+1
   jwt_decoder: ^2.0.1
   percent_indicator: ^4.0.1
+  flutter_neumorphic: 
+    git:
+      url: https://github.com/den0206/Flutter-Neumorphic.git
+      ref: feature/remoce_accentcolor
 
 dev_dependencies:
   flutter_test:
